# MesonCargoSubprojectTest-C

./: .gitignore  meson.build  thinger.c
subprojects/: gizmo-0.1-rs.wrap  gizmo.wrap
